# PyPhotoMV

./: main.py  pyproject.toml
