[tool.poetry]
name = "pyphotomv"
version = "0.0.1"
description = "写真を自動的に整理するためのスクリプト"
authors = ["hiroki tagami"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pyexiv2 = "^2.8.2"
setuptools = "^68.0.0"
piexif = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
